--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Auto Filter Bot V2",
     "description": "A Filter Bot Which Doesnt Need Manuall Filter Adding",
-    "logo": "",
+    "logo": "https://telegra.ph/file/667e15c821117633d07bd.png",
     "keywords": [
         "Auto",
         "Filter",
